# internal/http-server/handler/user.go
@@ -1,7 +1,6 @@
 package handler
 
 import (
-	"backend/internal/http-server/request"
 	"backend/internal/http-server/response"
 	"backend/internal/lib/logger/sl"
 	"backend/internal/storage"
@@ -12,53 +11,6 @@ import (
 	"net/http"
 	"net/mail"
 )
-
-// Register      Creates a user in database
-// @Summary      User registration
-// @Description  Creates a user in database
-// @Tags         user
-// @Accept       json
-// @Produce      json
-// @Param        input body       request.UserCreate true "User data"
-// @Success      201  {object}    response.User
-// @Failure      400  {object}    response.Error
-// @Failure      409  {object}    response.Error
-// @Failure      500  {object}    response.Error
-// @Router       /user            [post]
-func (h *Handler) Register(ctx *gin.Context) {
-	var body request.UserCreate
-
-	if err := ctx.BindJSON(&body); err != nil {
-		h.log.Error("failed to decode body")
-		response.InvalidRequestBody(ctx)
-		return
-	}
-
-	isEmailValid := checkEmailValidity(body.Email)
-	if !isEmailValid {
-		h.log.Info("email is invalid")
-		response.SendError(ctx, http.StatusBadRequest, "email is invalid")
-		return
-	}
-
-	passwordHash := h.hasher.Create(body.Password)
-
-	userID, err := h.storage.CreateUser(ctx, body.Email, body.Username, passwordHash)
-	if errors.Is(err, storage.ErrUserAlreadyExists) {
-		h.log.Info("user already exists")
-		response.SendError(ctx, http.StatusConflict, "user with this email already exists")
-		return
-	}
-
-	if err != nil {
-		h.log.Error("error while saving user", sl.Err(err), slog.String("email", body.Email))
-		response.SendError(ctx, http.StatusInternalServerError, "can't save user")
-		return
-	}
-
-	ctx.JSON(http.StatusCreated, response.User{Email: body.Email, Username: body.Username})
-	h.log.Info("user created", slog.String("id", userID.Hex()), slog.String("email", body.Email), slog.String("password_hash", passwordHash))
-}
 
 // DeleteMe      Delete me from database
 // @Summary      Delete me
