# internal/http-server/request/request.go
@@ -15,3 +15,7 @@ type URL struct {
 	Url   string `json:"url"`
 	Alias string `json:"alias,omitempty"`
 }
+
+type RefreshToken struct {
+	Token string `json:"token"`
+}
